force-app/main/default/objects/CutomerMedia__c/CutomerMedia__c.object-meta.xml
<CustomObject>
    <label>StudentMedia</label>
    <nameField>
        <displayFormat>CMN-{0000}</displayFormat>
        <label>CutomerMedia Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StudentMedias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>