force-app/main/default/objects/CutomerMedia__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Student</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>StudentMedias</relationshipLabel>
    <relationshipName>CustomerMedias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>