force-app/main/default/objects/CutomerMedia__c/fields/Dues_Penalties1__c.field-meta.xml
<CustomField>
    <fullName>Dues_Penalties1__c</fullName>
    <label>Dues/Penalties1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>