force-app/main/default/objects/CutomerMedia__c/fields/Dues_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Dues_Penalties__c</fullName>
    <formula>Extra_Days__c  *  Media__r.Penalty_Per_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dues/Penalties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>