force-app/main/default/objects/CutomerMedia__c/fields/Email_id__c.field-meta.xml
<CustomField>
    <fullName>Email_id__c</fullName>
    <label>Email_id</label>
    <required>true</required>
    <type>Email</type>
</CustomField>