force-app/main/default/objects/CutomerMedia__c/fields/Extra_Days__c.field-meta.xml
<CustomField>
    <fullName>Extra_Days__c</fullName>
    <formula>IF( Return_Date__c - Due_Date__c  &gt; 0,  Return_Date__c - Due_Date__c   , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>