force-app/main/default/objects/CutomerMedia__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <referenceTo>Media__c</referenceTo>
    <relationshipName>CustomerMedias</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>