force-app/main/default/objects/CutomerMedia__c/validationRules/Available_Media_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Media_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Media__r.Total_Media__c  -  Media__r.Media_Issued__c  = 0</errorConditionFormula>
    <errorDisplayField>Media__c</errorDisplayField>
    <errorMessage>Media Not Available Try another</errorMessage>
</ValidationRule>