force-app/main/default/objects/CutomerMedia__c/validationRules/Book_Issued.validationRule-meta.xml
<ValidationRule>
    <fullName>Book_Issued</fullName>
    <active>false</active>
    <errorConditionFormula>OR( Dues_Penalties__c  &gt; 0, Customer__r.Total_Penalties__c  &gt; 0)</errorConditionFormula>
    <errorMessage>The customer is blacklisted!!!
First, clear all its dues</errorMessage>
</ValidationRule>