force-app/main/default/objects/CutomerMedia__c/validationRules/EMail_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>EMail_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( Customer__r.Email_id__c  =  Email_id__c )</errorConditionFormula>
    <errorMessage>Email entered in customer  should be equal</errorMessage>
</ValidationRule>